tests/Houtamelo.Spire.Analyzers.Tests/SPIRE007/cases/Detect_SkipInit_InAsyncMethod.cs
//@ should_fail
// Ensure that SPIRE007 IS triggered when Unsafe.SkipInit appears in an async method.
public class Detect_SkipInit_InAsyncMethod
{
    public async Task Method()
    {
        Unsafe.SkipInit(out EnforceInitializationStruct s); //~ ERROR
        await Task.CompletedTask;
    }
}
